<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUser"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/FirstName"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/LastName"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/GradeLevel"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/StudentNum"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/Username"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="37dp"
            android:text="@string/Password"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/PasswordConfirm"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/AwardCategory"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:onClick="registerNewUser"
                android:text="Save"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:onClick="backToLogin"
                android:text="Cancel"
                android:textColor="@android:color/black"
                android:textSize="20sp" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">


        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="30dp" />


        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="10dp" />


        <Spinner
            android:id="@+id/gradeLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:layout_marginTop="18dp">

        </Spinner>

        <EditText
            android:id="@+id/txtStudentNumber"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="10dp"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtUsernameReg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="10dp" />


        <EditText
            android:id="@+id/txtPasswordReg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtPasswordConfirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/awardProgram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:layout_marginTop="32dp">

        </Spinner>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>